# CppGame

./: .gitignore  CMakeLists.txt
Content/Shaders/: Sprite.frag  Sprite.vert
src/: IntroScene.cpp  IntroScene.h  MainScene.cpp  MainScene.h  Tile.cpp  Tile.h  main.cpp
src/Engine/: Bitmap.cpp  Bitmap.h  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture2D.cpp  Texture2D.h  Time.cpp  Time.h
